tests/NormalTests/paczka1/small_fuzzy/68239037.err
Error in line 2: LJtw4mLfpE S559 74,5
Error in line 7: cXzdBK7xQlJ A655 -2,3
Error in line 6: LJtw4mLfpE A422 84,4
Error in line 9: A563 A563 36,3
Error in line 11: A563 A655 24,7
